# oxide

./: .gitignore  Cargo.toml  README.md  success.txt  test_simple.ox
crates/oxide-builtins/: Cargo.toml
crates/oxide-builtins/src/: alias.rs  bind.rs  cat.rs  cd.rs  clear.rs  echo.rs  env.rs  export.rs  find.rs  get.rs  grep.rs  help.rs  history.rs  kill.rs  lib.rs  ls.rs  open.rs  ps.rs  pwd.rs  rm.rs  sleep.rs  source.rs  top.rs  touch.rs  unset.rs
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/benches/: pipelines.rs  startup.rs
crates/oxide-cli/src/: main.rs
crates/oxide-compat/: Cargo.toml
crates/oxide-compat/src/: bash_mode.rs  lib.rs  posix_mode.rs
crates/oxide-config/: Cargo.toml
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: completion.rs  lib.rs  loop_impl.rs  shell.rs  state.rs
crates/oxide-data/: Cargo.toml
crates/oxide-data/src/: csv.rs  json.rs  lib.rs  table.rs  value.rs
crates/oxide-exec/: Cargo.toml
crates/oxide-exec/src/: executor.rs  jobs.rs  lib.rs  pipeline.rs  process.rs  redirect.rs  signals.rs  subshell.rs
crates/oxide-parser/: Cargo.toml
crates/oxide-parser/src/: ast.rs  expand.rs  glob.rs  heredoc.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/oxide-parser/src/grammar/: expressions.rs  mod.rs  pipelines.rs  statements.rs
crates/oxide-perf/: Cargo.toml
crates/oxide-perf/src/: cache.rs  lib.rs  profiler.rs  startup_opt.rs
crates/oxide-plugin/: Cargo.toml
crates/oxide-script/: Cargo.toml
crates/oxide-script/src/: errors.rs  functions.rs  lib.rs  modules.rs  runtime.rs  scope.rs  stdlib.rs
crates/oxide-security/: Cargo.toml
crates/oxide-security/src/: audit.rs  lib.rs  permissions.rs  sandbox.rs  secrets.rs
crates/oxide-ui/: Cargo.toml
crates/oxide-utils/: Cargo.toml
tests/: test.csv  test.json
tests/scripting/: test1.ox
tests/scripts/: test1.ox
