[workspace]
resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A modern, high-performance shell written in Rust."

# Common dependencies to save time in sub-crates
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }