[package]
name = "oxide-cli"
version.workspace = true
edition.workspace = true

[dependencies]
oxide-core = { path = "../oxide-core" }
oxide-config = { path = "../oxide-config" }
oxide-ui = { path = "../oxide-ui" }
anyhow.workspace = true  

[dev-dependencies]
criterion = "0.5.1"
oxide-compat = { path = "../oxide-compat" }
oxide-exec = { path = "../oxide-exec" }

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "pipelines"
harness = false


