[package]
name = "oxide-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
oxide-parser = { path = "../oxide-parser" }
oxide-builtins = { path = "../oxide-builtins" } # <-- Add this line
rustyline = "18.0.0"
oxide-compat = { version = "0.1.0", path = "../oxide-compat" }
oxide-data = { path = "../oxide-data" }
