[package]
name = "oxide-exec"
version.workspace = true
edition.workspace = true

[dependencies]
oxide-compat = { path = "../oxide-compat" }
oxide-parser = { path = "../oxide-parser" }
oxide-builtins = { path = "../oxide-builtins" }
oxide-data = { path = "../oxide-data" }
oxide-security = { path = "../oxide-security" }
ctrlc = "3.5.2"
